--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-spring": "^9.7.3",
     "sass": "^1.70.0",
     "scss": "^0.2.4",
+    "sweetalert2": "^11.10.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
